# test-bindgen-fetch

./: Cargo.toml  LICENSE_MIT  README.md  env.ps1
src/: client.rs  lib.rs  utils.rs
www/: README.md  bootstrap.js  index.html  index.js  package-lock.json  package.json
www/.bin/: create-wasm-app.js
